Add JUnit test - some corrects about integrations test in repository